gateway/.k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${GATEWAY_NAME}
  namespace: ${NAMESPACE}
  labels:
    app: ${GATEWAY_NAME}

spec:
  replicas: 1

  strategy:
    type: Recreate

  selector:
    matchLabels:
      app: ${GATEWAY_NAME}

  template:
    metadata:
      labels:
        app: ${GATEWAY_NAME}

    spec:
      enableServiceLinks: false
      terminationGracePeriodSeconds: 10
      imagePullSecrets:
        - name: retail-gitlab

      containers:
        - name: ${GATEWAY_NAME}
          image: ${GATEWAY_IMAGE}
          imagePullPolicy: Always
          

          command: [ "/usr/bin/krakend" ]
          args:
              - run
              - -c
              - /etc/krakend/krakend.json

          ports:
            - containerPort: 8081

          volumeMounts:
            - name: krakend-config
              mountPath: /etc/krakend/krakend.json
              subPath: krakend.json

      volumes:
        - name: krakend-config
          configMap:
            name: krakend-config
