gateway/.k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krakend-ingress
  namespace: ${NAMESPACE}
  annotations:
    kubernetes.io/ingress.class: "nginx"

spec:
  ingressClassName: nginx

  rules:
    - host: todomanagement-test.hepsiburada.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: krakend
                port:
                  number: 80
